overflow fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -704,7 +704,8 @@ h5, h6 {
 /*MOBILE VERSION*/
 @media only screen and (max-device-width: 768px) {
   body.navbar-open {
-    height: 0;
+    height: 0 !important;
+    overflow: hidden !important;
   }
 
   /*NAVIGATION MENU*/
